removed line to fix spacing

--- a/client/src/components/moviePosterCard.css
+++ b/client/src/components/moviePosterCard.css
@@ -169,12 +169,13 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 10px;
+  }
+  .movie-list img {
+    max-width: 270px;
   }
   .movie-list-title {
     font-size: 15px;
     font-weight: 600;
-    margin-top: 20%;
     margin-bottom: 10px;
     color: black;
     width: 250px;
